<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">MonArgent</string>
  <string name="action_settings">Paramètres</string>
  <string name="title_transaction_list">Liste des transactions</string>
  <string name="title_transaction_detail">Détails de la transaction</string>
  <string name="title_transaction_create">Nouvelle transaction</string>
  <string name="transaction_kind_income">Recette</string>
  <string name="transaction_kind_expense">Dépense</string>
  <string name="transaction_kind_transfer">Transfert</string>
  <string name="transaction_submit">Ajouter</string>
  <string name="transaction_date">Date</string>
  <string name="transaction_amount">Montant</string>
  <string name="transaction_notes">Notes</string>
  <string name="transaction_contents">Objet</string>
  <string name="transaction_added">Transaction ajoutée !</string>
  <string name="transaction_kind">Type</string>
  <string name="transaction_category">Catégorie</string>
  <string name="transaction_account">Compte</string>
  <string name="transaction_date_hint">Date (requis, jj/mm/aaaa)</string>
  <string name="transaction_amount_hint">Montant (requis)</string>
  <string name="transaction_contents_hint">Objet (requis)</string>
  <string name="settings_about">À propos de l\'application</string>
  <string name="settings_discreet_mode">Mode discret</string>
  <string name="settings_about_description">Développé par Hugo Locurcio et Antoine Chabin dans le cadre de l\'UE IF26.</string>
  <string name="app_version">1.0.0</string>
  <string name="settings_discreet_mode_description_1">Lorsque le mode discret est activé, les montants des transactions seront cachés.</string>
  <string name="preview">Aperçu</string>
  <string name="settings_discreet_mode_description_2" tools:ignore="Typos">Cela vous permet d\'utiliser l\'application en toute sérénité dans des lieux publics, par exemple.</string>
  <string name="setting_discreet_mode" translatable="false">discreet_mode</string>
  <string name="transaction_no_notes">Pas de notes</string>
  <string name="action_delete">Supprimer</string>
  <string name="transaction_delete_confirm">Voulez-vous vraiment supprimer cette transaction ?</string>
  <string name="yes">Oui</string>
  <string name="no">Non</string>
  <string name="transaction_account_cash" >Espèces</string>
  <string name="transaction_account_card">Carte bancaire</string>
  <string name="transaction_category_food">Nourriture</string>
  <string name="transaction_category_leisure">Loisirs</string>
  <string name="transaction_category_other">Autre</string>
</resources>
