<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SettingsDiscreetModeActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <Switch
      android:id="@+id/settings_discreet_mode_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:paddingBottom="16dp"
      android:text="@string/settings_discreet_mode" />
    <TextView
      android:id="@+id/settings_discreet_mode_description_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:lineSpacingMultiplier="1.25"
      android:paddingStart="16dp"
      android:paddingTop="8dp"
      android:paddingEnd="16dp"
      android:text="@string/settings_discreet_mode_description_1" />
    <TextView
      android:id="@+id/settings_discreet_mode_description_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:lineSpacingMultiplier="1.25"
      android:paddingStart="16dp"
      android:paddingTop="8dp"
      android:paddingEnd="16dp"
      android:text="@string/settings_discreet_mode_description_2" />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:paddingStart="48dp"
      android:paddingTop="32dp"
      android:paddingEnd="48dp">
      <TextView
        android:id="@+id/settings_discreet_mode_preview_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:paddingEnd="16dp"
        android:text="@string/preview"
        android:textAlignment="viewEnd"
        tools:ignore="RtlSymmetry" />
      <TextView
        android:id="@+id/settings_discreet_mode_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:textColor="#3388FF"
        tools:ignore="RtlSymmetry"
        tools:text="@tools:sample/lorem" />
    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
