<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="16dp"
  android:paddingTop="16dp"
  android:paddingEnd="16dp">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_kind_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_kind"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_kind"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_amount_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_amount"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_amount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_date_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_date"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_account_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_account"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_category_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_category"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_category"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_contents_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_contents"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_contents"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">
    <TextView
      android:id="@+id/transaction_detail_notes_key"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="80dp"
      android:fontFamily="sans-serif-medium"
      android:paddingEnd="16dp"
      android:text="@string/transaction_notes"
      android:textAlignment="textEnd"
      tools:ignore="RtlSymmetry" />
    <TextView
      android:id="@+id/transaction_detail_notes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="@tools:sample/lorem" />
  </LinearLayout>
</LinearLayout>
